# point-cloud-de-noising

./: .gitignore  pyproject.toml  test_inference.py  train.py
src/pcd_de_noising/: pcd_dataset.py
src/pcd_de_noising/model/: weathernet.py
